--- a/disqus_comments.html
+++ b/disqus_comments.html
@@ -18,7 +18,7 @@ this.page.identifier = parentUrl;
 //Github Default
 (function () {
 var d = document, s = d.createElement('script');
-s.src = '//SITE_SHORTNAME_ANDA_DISINI.disqus.com/embed.js';
+s.src = '//teknologi-jempolan.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
