--- a/tj_sitemap.html
+++ b/tj_sitemap.html
@@ -17,7 +17,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Tahoma,sans-serif;b
 #feed-container li a{text-decoration:none;color:#1976D2;font-weight:500}
 #feed-container li a:hover{text-decoration:underline;}
 #feed-container li .news-text{margin-top:5px;line-height:1.3em!important}
-#feed-container li img{margin:0 15px 5px 0;padding:7px 7px 7px 0;float:left;display:block;}
+#feed-container li img{margin:0 15px 5px 0;padding:7px 7px 7px 0;float:left;display:none;}
 #result-desc{margin:0;padding:0;}
 #result-desc div,#result-desc span{display:block;margin:0;padding:5px 0 7px;color:#000;}
 #result-desc div{color:inherit}
