--- a/contact-me.html
+++ b/contact-me.html
@@ -167,11 +167,11 @@ function myFunction() {
 }
 </script>
 <iframe id="hidden_iframe" name="hidden_iframe" onload="if(submitted){);}" style="display: none;"></iframe>
-            <form action="https://docs.google.com/forms/d/1aHcEFAqx-IpAPnWhCknh_9MHdEj1CkbTaofxxxxxxxx/formResponse" id="ss-form" method="POST" onsubmit="fadeEffect.init('fade', 1);document.getElementById('fade').style.display = 'block'" target="hidden_iframe">
+            <form action="https://docs.google.com/forms/d/1PQruTUgbbS8eKn2BlNp7xaT6mJmRqPOdJN5vRPQ-hMc/formResponse" id="ss-form" method="POST" onsubmit="fadeEffect.init('fade', 1);document.getElementById('fade').style.display = 'block'" target="hidden_iframe">
           <div class="styled-input">
                         <div class="styled-input-in">
                 <input type="text" aria-label="Name" name="entry.2005620554" value="" id="entry.2005620554" dir="auto" title="" required="required">
-                                <label>Name</label>
+                                <label>Nama</label>
                                 <span class="span1"></span><span class="span2"></span>
             </div>
           </div>
@@ -185,14 +185,14 @@ function myFunction() {
           <div class="styled-input wide">
                         <div class="styled-input-in">
                 <textarea aria-label="Comments" name="entry.839337160" rows="8" cols="0" id="entry.839337160" dir="auto" aria-required="true" required="required"></textarea>
-                                <label>Message</label>
+                                <label>Pesan</label>
                                 <span class="span1"></span><span class="span2"></span>
             </div>
           </div>
-          <input name="draftResponse" type="hidden" value="[,,&quot;666676987482120412&quot;]">
+          <input name="partialResponse" type="hidden" value="[null,null,&quot;-6690580053400894154&quot;]">
                     <input name="pageHistory" type="hidden" value="0">
-                    <input name="fbzx" type="hidden" value="666676987482120412">
-          <button type="submit" name="submit" class="btn btn-default">Send</button>
+                    <input name="fbzx" type="hidden" value="-6690580053400894154">
+          <button type="submit" name="submit" class="btn btn-default">Kirim</button>
           </div>
       </form>
             <div id="fade">
